--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,12 @@
         <module>flink-learning-data-sources</module>
         <module>flink-learning-data-sinks</module>
         <module>flink-learning-cep</module>
+        <module>flink-learning-start</module>
     </modules>
 
     <properties>
         <compiler.version>1.8</compiler.version>
-        <flink.version>1.6.2</flink.version>
+        <flink.version>1.8.0</flink.version>
         <java.version>1.8</java.version>
         <scala.binary.version>2.11</scala.binary.version>
 
